[gd_scene load_steps=8 format=3 uid="uid://bosovx8vkn40u"]

[ext_resource type="Script" path="res://GameSystem/mainMenu/MainMenu.gd" id="1_d0p4k"]
[ext_resource type="Texture2D" uid="uid://3ys7le0hp47a" path="res://resources/UI/InventoryRect.png" id="2_3xj7e"]
[ext_resource type="Texture2D" uid="uid://bxpjrd6lg035h" path="res://resources/UI/background.PNG" id="2_xdldx"]
[ext_resource type="Texture2D" uid="uid://vmwc3nctqg2u" path="res://resources/UI/buttonUnclickedLong.png" id="3_f6sgn"]
[ext_resource type="Texture2D" uid="uid://e4j12sscppa7" path="res://resources/UI/buttonClickedLong.png" id="4_lgvvg"]
[ext_resource type="Texture2D" uid="uid://vbomq4g75183" path="res://resources/UI/quitButtonUnclickedLong.png" id="5_jy1e8"]
[ext_resource type="Texture2D" uid="uid://cny7mn8gy65g6" path="res://resources/UI/quitButtonClickedLong.png" id="6_3ng6u"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0p4k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -966.0
offset_top = -542.0
offset_right = 954.0
offset_bottom = 538.0
texture = ExtResource("2_xdldx")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -109.0
offset_right = 96.5
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Sprout Quest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -48.0
offset_right = 66.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3xj7e")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -42.0
offset_right = 61.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="newGameButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_f6sgn")
texture_pressed = ExtResource("4_lgvvg")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/newGameButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057
anchor_top = 0.158
anchor_right = 0.057
anchor_bottom = 0.158
offset_left = 0.0459995
offset_top = -1.002
offset_right = 109.046
offset_bottom = 10.998
theme_override_font_sizes/font_size = 8
text = "New game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="loadButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_f6sgn")
texture_pressed = ExtResource("4_lgvvg")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/loadButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057
anchor_top = 0.158
anchor_right = 0.057
anchor_bottom = 0.158
offset_left = 0.0459995
offset_top = -1.002
offset_right = 109.046
offset_bottom = 10.998
theme_override_font_sizes/font_size = 8
text = "Load game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_jy1e8")
texture_pressed = ExtResource("6_3ng6u")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/quitButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057
anchor_top = 0.158
anchor_right = 0.057
anchor_bottom = 0.158
offset_left = 0.0459995
offset_top = -1.002
offset_right = 109.046
offset_bottom = 10.998
theme_override_font_sizes/font_size = 8
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/newGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/loadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
